Test demo overflow fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -90,8 +90,6 @@ a:hover .icon {
 	background: black;
 	overflow: hidden;
 	padding-top: 66.66%;
-    max-width: 960px;
-    max-height: 640px;
     margin: 0 auto;
 	position: relative;
 }
@@ -100,14 +98,17 @@ a:hover .icon {
     top: 0;
     left: 0;
 	border: 0;
-	width: 100%;
-	height: 100%;
-	max-height: 640px;
-	max-width: 960px;
 	position: absolute;
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
+}
+
+.demo-wrapper {
+    width: 100%;
+    height: 100%;
+    max-height: 640px;
+    max-width: 960px;
 }
 
 button.load {
@@ -329,32 +330,32 @@ li a {
 }
 
 ul {
-  list-style-type: none;
+    list-style-type: none;
 }
 
 .menu li {
-  font-size: 16px;
-  padding: 15px 5px;
-  white-space: nowrap;
+    font-size: 16px;
+    padding: 15px 5px;
+    white-space: nowrap;
 }
 
 /* Mobile menu */
 .menu {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .toggle {
-  order: 1;
+    order: 1;
 }
 
 .item {
-  width: 100%;
-  text-align: center;
-  order: 3;
-  display: none;
+    width: 100%;
+    text-align: center;
+    order: 3;
+    display: none;
 }
 
 .toggle {
